# markdown

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  IMAGE_DRAG_DROP.md  IMPLEMENTATION.md  LICENSE  Makefile.gtk  QUICKSTART.md  README.md  README_GTK.md  buffer.c  buffer.h  build.bat  build.ps1  build.sh  demo.md  emoji.c  emoji.h  gtk_editor.c  gtk_editor.h  gtk_main.c  highlight.c  highlight.h  markdown-features.md  test.md  test_table.md
examples/: 01-headings.md  02-text-formatting.md  03-lists.md  04-links-images.md  05-code-blocks.md  06-tables.md  07-blockquotes.md  08-horizontal-rules.md  09-emojis.md  10-complete-example.md  11-yaml-frontmatter.md
src/: codehighlighter.cpp  codehighlighter.h  emojisupport.cpp  emojisupport.h  filebrowser.cpp  filebrowser.h  gitwidget.cpp  gitwidget.h  gitwidget_old.cpp  main.cpp  mainwindow.cpp  mainwindow.h  markdowneditor.cpp  markdowneditor.h  markdownhighlighter.cpp  markdownhighlighter.h  previewwidget.cpp  previewwidget.h
vibecoding/: IMPLEMENTATION.md  git-features.md  image-features.md
